[Edit]: API
