# docs/swagger.yaml
@@ -52,6 +52,8 @@ definitions:
         type: string
       lastname:
         type: string
+      status:
+        type: string
       updated_at:
         type: string
     type: object
@@ -63,7 +65,7 @@ definitions:
         type: string
       lastname:
         type: string
-      updated_at:
+      status:
         type: string
     type: object
 host: localhost:1323
