# models/userModel/userModel.go
@@ -10,13 +10,22 @@ type User struct {
 	CreatedAt *time.Time `json:"created_at" gorm:"column:created_at"`
 	UpdatedAt *time.Time `json:"updated_at" gorm:"column:updated_at"`
 	DeletedAt *time.Time `json:"deleted_at" gorm:"column:deleted_at"`
+	Status    string     `json:"status" gorm:"column:status"`
 }
 
 type UserUpdate struct {
-	Firstname string     `json:"firstname" gorm:"column:firstname"`
-	Lastname  string     `json:"lastname" gorm:"column:lastname"`
-	Age       int        `json:"age" gorm:"column:age"`
-	UpdatedAt *time.Time `json:"updated_at" gorm:"column:updated_at"`
+	Firstname string `json:"firstname" gorm:"column:firstname"`
+	Lastname  string `json:"lastname" gorm:"column:lastname"`
+	Age       int    `json:"age" gorm:"column:age"`
+	Status    string `json:"status" gorm:"column:status"`
+}
+
+type UserMultiUpdate struct {
+	Id        string `json:"id gorm:"column:id"`
+	Firstname string `json:"firstname" gorm:"column:firstname"`
+	Lastname  string `json:"lastname" gorm:"column:lastname"`
+	Age       int    `json:"age" gorm:"column:age"`
+	Status    string `json:"status" gorm:"column:status"`
 }
 
 type UserProductOder struct {
